[gd_scene load_steps=9 format=3 uid="uid://ck07gb6okm0b7"]

[ext_resource type="PackedScene" uid="uid://bdmh206gphq5x" path="res://scenes/character/player.tscn" id="1_e7xjn"]
[ext_resource type="Script" path="res://main.gd" id="1_t0h8w"]
[ext_resource type="PackedScene" uid="uid://8qw5q7bqgo13" path="res://scenes/environment/ground.tscn" id="4_yp8h2"]
[ext_resource type="PackedScene" uid="uid://cftnjww02c1k8" path="res://scenes/managers/obstacle_manager.tscn" id="5_3eeog"]
[ext_resource type="PackedScene" uid="uid://biiy303gmjpnk" path="res://scenes/menus/start_menu.tscn" id="6_1gn1k"]
[ext_resource type="PackedScene" uid="uid://dm8kiuby10en8" path="res://scenes/managers/audio_manager.tscn" id="7_rou4p"]
[ext_resource type="PackedScene" uid="uid://buavy74nlmx3o" path="res://scenes/menus/score_overlay.tscn" id="8_sgdba"]
[ext_resource type="PackedScene" uid="uid://duy3tryjiehlx" path="res://scenes/menus/game_over.tscn" id="9_shhu3"]

[node name="Main" type="Node"]
script = ExtResource("1_t0h8w")

[node name="Player" parent="." instance=ExtResource("1_e7xjn")]
position = Vector2(399, 303)

[node name="ObstacleManager" parent="." instance=ExtResource("5_3eeog")]
position = Vector2(850, 0)

[node name="Ground" parent="." instance=ExtResource("4_yp8h2")]
z_index = 1
position = Vector2(-25, 540)

[node name="AudioManager" parent="." instance=ExtResource("7_rou4p")]

[node name="ScoreOverlay" parent="." instance=ExtResource("8_sgdba")]
z_index = 20
position = Vector2(367, -3)

[node name="StartMenu" parent="." instance=ExtResource("6_1gn1k")]
z_index = 20
position = Vector2(227, 169)

[node name="GameOver" parent="." instance=ExtResource("9_shhu3")]
z_index = 20
position = Vector2(262, 106)
